# segmentation-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
include/: image_io.hpp  kmeans.hpp  pfcm.hpp  segmentation.hpp
src/: bindings.cpp  image_io.cpp  kmeans.cpp  pfcm.cpp  segmentation.cpp
tests/: make_fixture.py  test_python_bindings.py  test_segmentation.cpp
