[build-system]
requires = ["scikit-build-core>=0.9"]
build-backend = "scikit_build_core.build"

[project]
name = "segmentation-core"
version = "0.1.0"
description = "CPU image segmentation engine (KMeans, PFCM) with Python bindings"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.build-type = "Release"
